pokerth/00-Erreur-Compile-AVEC-boost-1.87.0.TXT


In file included from src/db/common/serverdbgeneric.cpp:33:
src/db/serverdbgeneric.h:44:78: error: ‘io_service’ is not a member of ‘boost::asio’; did you mean ‘use_service’?
   44 |         ServerDBGeneric(ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService);
      |                                                                              ^~~~~~~~~~
      |                                                                              use_service
src/db/serverdbgeneric.h:44:88: error: template argument 1 is invalid
   44 |         ServerDBGeneric(ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService);
      |                                                                                        ^
src/db/serverdbgeneric.h:69:40: error: ‘io_service’ is not a member of ‘boost::asio’; did you mean ‘use_service’?
   69 |         boost::shared_ptr<boost::asio::io_service> m_ioService;
      |                                        ^~~~~~~~~~
      |                                        use_service
src/db/serverdbgeneric.h:69:50: error: template argument 1 is invalid
   69 |         boost::shared_ptr<boost::asio::io_service> m_ioService;
      |                                                  ^
src/db/common/serverdbgeneric.cpp:38:87: error: ‘io_service’ is not a member of ‘boost::asio’; did you mean ‘use_service’?
   38 | ServerDBGeneric::ServerDBGeneric(ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService)
      |                                                                                       ^~~~~~~~~~
      |                                                                                       use_service
src/db/common/serverdbgeneric.cpp:38:97: error: template argument 1 is invalid
   38 | ServerDBGeneric::ServerDBGeneric(ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService)
      |                                                                                                 ^
src/db/common/serverdbgeneric.cpp: In member function ‘virtual void ServerDBGeneric::AsyncPlayerLogin(unsigned int, const std::string&)’:
src/db/common/serverdbgeneric.cpp:66:20: error: base operand of ‘->’ is not a pointer
   66 |         m_ioService->post(boost::bind(&ServerDBCallback::PlayerLoginFailed, &m_callback, requestId));
      |                    ^~
In file included from src/db/common/serverdbfactory.cpp:32:
src/db/serverdbfactory.h:47:70: error: ‘io_service’ is not a member of ‘boost::asio’; did you mean ‘use_service’?
   47 |                 ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService) = 0;
      |                                                                      ^~~~~~~~~~
      |                                                                      use_service
src/db/serverdbfactory.h:47:80: error: template argument 1 is invalid
   47 |                 ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService) = 0;
      |                                                                                ^
src/db/common/serverdbgeneric.cpp: In member function ‘virtual void ServerDBGeneric::AsyncCheckAvatarBlacklist(unsigned int, const std::string&)’:
src/db/common/serverdbgeneric.cpp:72:20: error: base operand of ‘->’ is not a pointer
   72 |         m_ioService->post(boost::bind(&ServerDBCallback::AvatarIsBlacklisted, &m_callback, requestId));
      |                    ^~
src/db/common/serverdbgeneric.cpp: In member function ‘virtual void ServerDBGeneric::AsyncCreateGame(unsigned int, const std::string&)’:
src/db/common/serverdbgeneric.cpp:88:20: error: base operand of ‘->’ is not a pointer
   88 |         m_ioService->post(boost::bind(&ServerDBCallback::CreateGameFailed, &m_callback, requestId));
      |                    ^~
src/db/common/serverdbgeneric.cpp: In member function ‘virtual void ServerDBGeneric::AsyncReportAvatar(unsigned int, unsigned int, DB_id, const std::string&, const std::string&, DB_id*)’:
src/db/common/serverdbgeneric.cpp:104:20: error: base operand of ‘->’ is not a pointer
  104 |         m_ioService->post(boost::bind(&ServerDBCallback::ReportAvatarFailed, &m_callback, requestId, replyId));
      |                    ^~
src/db/common/serverdbgeneric.cpp: In member function ‘virtual void ServerDBGeneric::AsyncReportGame(unsigned int, unsigned int, DB_id*, unsigned int, const std::string&, DB_id*)’:
src/db/common/serverdbgeneric.cpp:110:20: error: base operand of ‘->’ is not a pointer
  110 |         m_ioService->post(boost::bind(&ServerDBCallback::ReportGameFailed, &m_callback, requestId, replyId));
      |                    ^~
In file included from src/db/common/serverdbfactorygeneric.cpp:32:
src/db/serverdbfactorygeneric.h:48:70: error: ‘io_service’ is not a member of ‘boost::asio’; did you mean ‘use_service’?
   48 |                 ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService);
      |                                                                      ^~~~~~~~~~
      |                                                                      use_service
src/db/serverdbfactorygeneric.h:48:80: error: template argument 1 is invalid
   48 |                 ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService);
      |                                                                                ^
In file included from src/db/common/serverdbfactorygeneric.cpp:33:
src/db/serverdbgeneric.h:44:78: error: ‘io_service’ is not a member of ‘boost::asio’; did you mean ‘use_service’?
   44 |         ServerDBGeneric(ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService);
      |                                                                              ^~~~~~~~~~
      |                                                                              use_service
src/db/serverdbgeneric.h:44:88: error: template argument 1 is invalid
   44 |         ServerDBGeneric(ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService);
      |                                                                                        ^
src/db/serverdbgeneric.h:69:40: error: ‘io_service’ is not a member of ‘boost::asio’; did you mean ‘use_service’?
   69 |         boost::shared_ptr<boost::asio::io_service> m_ioService;
      |                                        ^~~~~~~~~~
      |                                        use_service
src/db/serverdbgeneric.h:69:50: error: template argument 1 is invalid
   69 |         boost::shared_ptr<boost::asio::io_service> m_ioService;
      |                                                  ^
src/db/common/serverdbfactorygeneric.cpp:45:99: error: ‘io_service’ is not a member of ‘boost::asio’; did you mean ‘use_service’?
   45 | ServerDBFactoryGeneric::CreateServerDBObject(ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService)
      |                                                                                                   ^~~~~~~~~~
      |                                                                                                   use_service
src/db/common/serverdbfactorygeneric.cpp:45:109: error: template argument 1 is invalid
   45 | ServerDBFactoryGeneric::CreateServerDBObject(ServerDBCallback &cb, boost::shared_ptr<boost::asio::io_service> ioService)
      |                                                                                                             ^
